correctly align grid menu items

--- a/client/src/components/styles/Sidebar.css
+++ b/client/src/components/styles/Sidebar.css
@@ -57,14 +57,15 @@
 
 .sidebar-menu-item {
   display: grid;
-  grid-row: 2 / span 1;
   font-size: 16px;
+  border-left: 4px solid transparent;
   transition: background-color .2s ease-in-out,
     box-shadow .2s ease-in-out;
 }
 
 .sidebar-menu-item > p {
   color: #fff;
+  padding-left: 4px;
   justify-self: center;
   align-self: center;
 }
@@ -77,4 +78,8 @@
 
 .sidebar-menu-item:hover {
   color: var(--base);
+}
+
+.sidebar-select-dashboard {
+  grid-row: 2 / span 1;
 }
